@@ -53,6 +53,7 @@
 - added: `RESTBuilder.plain()` it returns a raw string from the response body
 - added: `versions` file supports `auto` value for generating auto-checksum of files
 - added: `F.load()` supports `test`
+- added: NoSQL binary supports `custom` small data attributes
 
 - updated: (IMPORTANT) NoSQL binary divides files to independent directories for 1000 files per directory
 - updated: `GROUP()` by adding a new argument `url_prefix`
